task2/nginx-deploy-base.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-base
  namespace: task2
  labels:
    app: nginx-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-base
  template:
    metadata:
      labels:
        app: nginx-base
    spec:
      containers:
      - name: nginx
        image: marfich/mynginx:base
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-base
  namespace: task2
spec:
  type: ClusterIP
  selector:
    app: nginx-base
  ports:
  - port: 8001
    targetPort: 80
