task2/nginx-deploy-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
  namespace: task2
  labels:
    app: nginx-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-canary
  template:
    metadata:
      labels:
        app: nginx-canary
    spec:
      containers:
      - name: nginx
        image: marfich/mynginx:canary
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-canary
  namespace: task2
spec:
  type: ClusterIP
  selector:
    app: nginx-canary
  ports:
  - port: 8002
    targetPort: 80
